# simplB

./: .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
backend/: .pre-commit-config.yaml  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/blog_posts/: fourth_post.md  second_post.md
backend/app/utils/: utils.py
frontend/: .prettierignore  .prettierrc  Dockerfile  package-lock.json  package.json
frontend/src/app/: layout.tsx  loading.tsx  page.tsx
frontend/src/components/post/: post.tsx
frontend/src/components/posts/: posts.tsx
frontend/src/components/sidebar/: sidebar.tsx
frontend/src/providers/: reactQuery.tsx
frontend/src/queries/: getPosts.tsx
frontend/src/types/: types.tsx
