[tool.poetry]
name = "simplb"
version = "0.1.0"
description = "Blog written with a clean and simple architecture in mind."
authors = ["Mads Garff <mads@garff.dk>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
