[tool.poetry]
name = "app"
version = "0.1.0"
description = "A backend for a blog written with simplicity in mind."
authors = ["Mads Garff <mads@garff.dk>"]
license = "MIT"
readme = "README.md"
packages = [{include = "app"}]


[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
pre-commit = "^4.0.1"
isort = "^5.13.2"
argcomplete = "^3.5.3"
attrs = "^24.3.0"
babel = "^2.16.0"
bcc = "^0.1.10"
blinker = "^1.9.0"
certifi = "^2024.12.14"
chardet = "^5.2.0"
click = "^8.1.8"
colorama = "^0.4.6"
configobj = "^5.0.9"
cryptography = "^44.0.0"
defer = "^1.0.4"
distro = "^1.9.0"
distro-info = "^1.0"
httplib2 = "^0.22.0"
idna = "^3.10"
jinja2 = "^3.1.5"
jsonpatch = "^1.33"
jsonpointer = "^3.0.0"
jsonschema = "^4.23.0"
launchpadlib = "^2.0.0"
lazr-restfulclient = "^0.14.6"
lazr-uri = "^1.0.7"
louis = "^1.3"
markdown-it-py = "^3.0.0"
markupsafe = "^3.0.2"
mdurl = "^0.1.2"
meson = "^1.6.1"
netaddr = "^1.3.0"
netifaces = "^0.11.0"
oauthlib = "^3.2.2"
olefile = "^0.47"
packaging = "^24.2"
pexpect = "^4.9.0"
pillow = "^11.1.0"
pipx = "^1.7.1"
platformdirs = "^4.3.6"
psutil = "^6.1.1"
ptyprocess = "^0.7.0"
pygments = "^2.19.1"
pyjwt = "^2.10.1"
pyparsing = "^3.2.1"
pyrsistent = "^0.20.0"
pyserial = "^3.5"
python-dateutil = "^2.9.0.post0"
python-debian = "^0.1.49"
pytz = "^2024.2"
pyxdg = "^0.28"
pyyaml = "^6.0.2"
requests = "^2.32.3"
rich = "^13.9.4"
setuptools = "^75.8.0"
six = "^1.17.0"
typing-extensions = "^4.12.2"
urllib3 = "^2.3.0"
userpath = "^1.9.2"
wadllib = "^2.0.0"
wheel = "^0.45.1"
xdg = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
